# ai-camera-project

./: .gitignore  pyproject.toml
src/ai_camera_project/: detector.py  main.py  stream_service.py  test.py  web_server.py
