[project]
name = "ai-camera-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "nvidia-cublas (>=13.4.0.1,<14.0.0.0)",
    "ultralytics (>=8.4.37,<9.0.0)"
]

[tool.poetry]
packages = [{include = "ai_camera_project", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
